2002-04-19  Ray Tomlinson  <RTomlinson@bbn.com>

	* PersistenceControlPlugin.java:
	Plugin to control persistence. Interrogates the persistence
	service for all controls and creates OperatingModes for those
	controls. Then monitors the OperatingModes and adjusts the
	controls accordingly.

	* PersistencePluginAdapter.java:
	Adapter for PersistencePlugin implementations defining default
	implementations of several methods that seldom need to be tailored
	by the plugin. This methods include the new methods for specifying
	media-specific controls.

	* PersistencePlugin.java:
	Add methods for media-specific controls (OperatingModes)

	* FilePersistence.java: 
	* DummyPersistence.java: 
	* DatabasePersistence.java:
	Used PersistencePluginAdapter for common functions.

2002-04-10  Ray Tomlinson  <RTomlinson@bbn.com>

	* SequenceNumbers.java: 
	* PersistencePlugin.java: 
	* PersistenceOutputStream.java: 
	* Persistence.java: 
	* FilePersistence.java: 
	* DummyPersistence.java: 
	* DatabasePersistence.java: 
	* BasePersistence.java:
	Changes to support persistence adaptivity.

2002-03-11  Ray Tomlinson  <RTomlinson@bbn.com>

	* PersistencePlugin.java:
	Add class javadoc.

2002-03-08  Ray Tomlinson  <RTomlinson@bbn.com>

	* SequenceNumbers.java:
	* PersistencePluginSupport.java:
	* PersistencePlugin.java: 
	* FilePersistence.java:
	* DummyPersistence.java: 
	* DatabasePersistence.java:
	* BasePersistence.java:
	Obtain media-specific services using PersistencePlugin
	implementations instead of sub-classing BasePersistence. Basic
	operation has not changed only refactored.
	Convert to using LoggingService instead of writing history and
	other files.

2002-01-24  Ray Tomlinson  <RTomlinson@bbn.com>

	* DatabasePersistence.java:
	Fix bug 1014
	The query to update the status of incremental deltas in the
	database was being overwritten with the query to update the status
	of full deltas so incremental deltas remained active forever and